      + this fixes some exceptions we were having with some thumbnails
    - check if exif[Orientaion] is set before using it
    - capture Imagick() exceptions
    - when generating cache filenames, remove duplicated / in paths
    - separate out generate_thumbnail() logic into its own function
      separate from print_thumbnail()
    - depend on php5-cli for the php5 command

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 08 Jul 2014 17:50:18 -0500

pictor (2.31-0ubuntu1) utopic; urgency=medium

  * debian/control:
    - fix typo in dependency, move to suggests

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 08 Jul 2014 17:50:16 -0500

pictor (2.30-0ubuntu1) utopic; urgency=medium

  * debian/control, debian/pictor.dirs, debian/pictor.postinst,
    index.php:
    - add video transcoding support to pictor
    - depend on libav-tools for avconv command
    - improve video embedding support by transcoding to h264 and use the
      html5 video element
  * index.php:
    - extract the first image from a video and use it as a thumbnail
    - overlay a film strip icon on the video thumbnail
    - add support for mp4, use a "play" icon for video
    - no need to convert files that are already mp4

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 08 Jul 2014 17:41:44 -0500

pictor (2.29-0ubuntu1) utopic; urgency=medium

  * pictor-unload:
    - add a few more info messages
    - fix file/directory permissions on unload

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 09 Jun 2014 11:11:32 -0700

pictor (2.28-0ubuntu1) utopic; urgency=medium

  * img/pictor_14.png, img/pictor_192.png, img/pictor_64.png,
    img/pictor.png:
    - transparent background for logos

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Apr 2014 09:52:40 -0700

pictor (2.27-0ubuntu1) trusty; urgency=medium

  * === added directory img, img/pictor_14.png, img/pictor_192.png,
    img/pictor_64.png, img/pictor.png:
    - add new pictor logo
  * debian/pictor.postrm: