@@ -1,3 +1,3 @@
 #!/bin/sh
 
-su -l www-data run-one php5 /usr/share/pictor/index.php batch
+run-one sudo -u www-data php5 /usr/share/pictor/index.php batch
